# convolios

./: .env.example  .gitignore  ARCHITECTURE.md  PLAN.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.cursor/rules/: convolios-context.mdc
.github/workflows/: release.yml
scripts/: backfill.mjs  cleanup-groups-and-dupes.mjs  migrate-avatars.mjs
src/: App.tsx  index.css  index.ts  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: infra.toml
src-tauri/scripts/: build-sidecars.sh
src-tauri/sidecars/meta-bridge/: .gitignore  README.md  bridge.go  go.mod  go.sum  main.go  rpc.go  smoke_test.sh
src-tauri/src/: lib.rs  send_limiter.rs
src-tauri/src/on_device/: commands.rs  keychain.rs  mod.rs  rpc.rs
src/components/: AvatarImage.tsx
src/components/icons/: ChannelLogo.tsx
src/components/inbox/: InboxList.tsx
src/components/settings/: Settings.tsx
src/components/sidebar/: Sidebar.tsx
src/components/thread/: ThreadBanner.tsx  ThreadView.tsx  threadStyles.ts
src/hooks/: useCircles.ts  useConversations.ts  useFlaggedMessages.ts  useMergeSuggestions.ts  useOnDeviceBridge.ts  useRealtimeMessages.ts  useSnooze.ts  useThread.ts  useThreadContext.ts  useUpdater.ts
src/lib/: auth.ts  queryClient.ts  realtimeContext.ts  supabase.ts
src/stores/: accountsStore.ts  inboxStore.ts  preferencesStore.ts  syncStatusStore.ts
src/types/: index.ts
src/utils/: index.ts
supabase/: config.toml
supabase/functions/_shared/: auth.ts  channel-map.ts  cors.ts  crypto.ts  logging.ts  validate.ts
supabase/functions/merge-suggestions/: deno.json  index.ts
supabase/functions/unipile-account-callback/: index.ts
supabase/functions/unipile-webhook/: index.ts
supabase/migrations/: 001_initial_schema.sql  002_enable_realtime.sql  003_backfill_function.sql  004_sender_reactions.sql  005_conversations_rpc.sql  006_schema_hardening.sql  007_message_metadata_expansion.sql  008_replica_identity_full.sql  009_seen_by_column.sql  010_conversations_seen_delivered.sql  012_connected_accounts_details.sql  013_backfill_person_name_fallback.sql  014_merge_duplicate_persons.sql  015_merge_fuzzy_duplicate_persons.sql  016_restore_unread_count.sql  017_avatar_storage_and_staleness.sql  018_cascade_delete_messages.sql  019_deletion_audit_log.sql  020_rpc_include_avatar_url.sql  021_remove_name_based_matching.sql  022_harden_security_definer.sql  023_x_oauth_state.sql  024_search_messages.sql  025_screener_circles_merge.sql  026_identity_enrichment.sql  027_merge_suggestions_quality.sql  028_merge_clusters.sql  029_fix_merge_dismissed_pk.sql  030_fix_merge_clusters_volatile.sql  031_sidebar_unread_counts.sql  032_backfill_read_at.sql  033_exclude_groups_from_merge.sql  034_message_routing_safeguards.sql  035_fix_undo_merge_triggers.sql  036_fix_merge_persons.sql  037_improve_merge_quality.sql  038_cleanup_ghost_persons.sql  039_screener_default_pending.sql  040_normalize_whatsapp_handles.sql  041_fix_identity_unique_and_x_handles.sql  (+24 more)
supabase/templates/: magic_link.html
(+1 files in other folders)
