[package]
name = "app"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
chrono = "0.4"
tauri-plugin-shell = "2"
base64 = "0.22"
tauri-plugin-zustand = "1"
tauri-plugin-deep-link = "2"
urlencoding = "2.1.3"
sha2 = "0.10"
getrandom = "0.2"
rusqlite = { version = "0.39.0", features = ["bundled"] }
open = "5"
tauri-plugin-notification = "2.3.3"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
aes-gcm = "0.10.3"
