[package]
name = "app"
version = "0.2.14"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
chrono = "0.4"
tauri-plugin-shell = "2"
base64 = "0.22"
tauri-plugin-zustand = "1"
tauri-plugin-deep-link = "2"
urlencoding = "2.1.3"
sha2 = "0.10"
getrandom = "0.2"
rusqlite = { version = "0.39.0", features = ["bundled"] }
open = "5"
tauri-plugin-notification = "2.3.3"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
aes-gcm = "0.10.3"
tokio = { version = "1", features = ["time", "net", "io-util", "process", "macros", "sync", "rt-multi-thread"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
parking_lot = "0.12"
regex = "1"
# wry re-exports `Cookie` but we touch it directly for its `Display` impl and
# ergonomic field accessors during the on-device login cookie grab.
cookie = "0.18"

# macOS-only: on-device login webview cookie extraction bridges directly to
# WKHTTPCookieStore via objc2. Versions pinned to what Tauri already uses
# transitively so we share one copy.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSArray", "NSString", "NSURL", "NSHTTPCookie"] }
objc2-web-kit = { version = "0.3", features = ["WKWebView", "WKWebViewConfiguration", "WKWebsiteDataStore", "WKHTTPCookieStore"] }
block2 = "0.6"
